#Fix Fixed SonarQube issue

--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" th:href="@{styles/evidence/evidence.css}">
     <link rel="stylesheet" th:href="@{styles/evidence/categories.css}">
     <link rel="stylesheet" th:href="@{styles/evidence/skills.css}">
-
+    <title>Home</title>
     <script th:inline="javascript">
         let EVIDENCE_IDS = [];
         let middle_id;
