#Fix Fixed slow one by one loading

--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -73,8 +73,9 @@
 </div>
 </body>
 <script>
-  updateGroupRepositoryElement(true)
-  setTimeout(updateAllCharts, 3000)
+  // updateGroupRepositoryElement(true)
+  // setTimeout(updateAllCharts, 2000)
+  // updateAllCharts()
 </script>
 
 </html>
