#feature Testing favicon.ico on the VM with context variable

--- a/portfolio/src/main/resources/templates/templatesUser/profile.html
+++ b/portfolio/src/main/resources/templates/templatesUser/profile.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" th:href="@{styles/user/profile.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
