#feature Added favicon.ico on the VM with context variable to all HTML pages

--- a/portfolio/src/main/resources/templates/templatesGroup/addEditGroup.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/addEditGroup.html
@@ -4,6 +4,7 @@
 <head>
     <title>Edit Group</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
     <link th:href="@{styles/group/addEditGroup.css}" rel="stylesheet" />
 
