--- a/portfolio/src/main/resources/templates/error.html
+++ b/portfolio/src/main/resources/templates/error.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <style>
         table td{
             vertical-align:top;
