--- a/portfolio/src/main/resources/templates/templatesEvidence/categories.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/categories.html
@@ -4,6 +4,7 @@
       lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" th:href="@{styles/evidence/portfolio.css}">
     <link rel="stylesheet" th:href="@{styles/evidence/evidence.css}">
