--- a/portfolio/src/main/resources/templates/templatesProject/addEditEvent.html
+++ b/portfolio/src/main/resources/templates/templatesProject/addEditEvent.html
@@ -4,6 +4,7 @@
 <head>
     <title>Edit event</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
     <link th:href="@{styles/project/addEditEvent.css}" rel="stylesheet" />
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
