--- a/portfolio/src/main/resources/templates/templatesProject/editMilestone.html
+++ b/portfolio/src/main/resources/templates/templatesProject/editMilestone.html
@@ -4,6 +4,7 @@
 <head>
     <title>Edit Milestone</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
     <link th:href="@{styles/project/addEditImportantDate.css}" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
