--- a/portfolio/src/main/resources/templates/templatesProject/planner.html
+++ b/portfolio/src/main/resources/templates/templatesProject/planner.html
@@ -3,6 +3,7 @@
 <head>
     <title th:text="${project.getName}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" th:href="@{styles/project/planner.css}">
     <link rel="stylesheet" th:href="@{styles/project/projectDetails.css}"/>
