--- a/portfolio/src/main/resources/templates/templatesUser/changePassword.html
+++ b/portfolio/src/main/resources/templates/templatesUser/changePassword.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Change Password</title>
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <link rel="stylesheet" th:href="@{styles/user/changePassword.css}">
