--- a/portfolio/src/main/resources/templates/templatesUser/editUser.html
+++ b/portfolio/src/main/resources/templates/templatesUser/editUser.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Profile</title>
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link rel="stylesheet" th:href="@{styles/user/editUser.css}">
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
