--- a/portfolio/src/main/resources/templates/templatesUser/login.html
+++ b/portfolio/src/main/resources/templates/templatesUser/login.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:href="@{styles/user/loginPage.css}" rel="stylesheet"/>
 </head>
 <body>
