#Feature Added an error message which tells the user the reason the commits button is not visible.

--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -169,6 +169,7 @@
             </div>
             <input th:if="${evidenceId == -1 || evidenceId =='-1'}" type="hidden" id="evidence-form__hidden-webLinks-names" name="evidenceWebLinkNames"/>
             <input th:if="${evidenceId == -1 || evidenceId =='-1'}" type="hidden" id="evidence-form__hidden-webLinks-links" name="evidenceWebLinks"/>
+
             <!-- Users !-->
             <label>Users
                 <span data-toggle="tooltip"
@@ -191,6 +192,7 @@
             <div th:if="${displayCommits}">
                 <button type="button" class="btn btn-primary evidence-form__add-commits-button" id="open-modal__button" data-bs-toggle="modal" data-bs-target="#add-evidence-commits__modal">Add Commits</button>
             </div>
+            <p class="evidence-form__error-message" th:text="${commitsError}" />
             <div id="commit-container"></div>
             <input type="hidden" id="evidence-form__hidden-commits-field" name="evidenceCommits"/>
 
