--- a/portfolio/src/main/resources/static/styles/user/profile.css
+++ b/portfolio/src/main/resources/static/styles/user/profile.css
@@ -6,19 +6,34 @@
 .container {
     display: flex;
     flex-direction: row;
+    border: 1px solid var(--color-accent);
+    border-radius: 1.5rem;
+    background-color: var(--color-complement);
+    width: 750px;
+    padding: 20px;
+    margin: 100px auto;
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
 }
 
 .profile-pic__row {
-    margin: auto;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     width: 50%;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent !important;
+    border: none !important;
+}
+
+.profile-pic__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .profile-pic__row img {
     max-width: 100%;
     height: auto;
+    border-radius: 100%;
+    width: 50%;
 }
 
 .profile-pic__row .icon {
@@ -27,10 +42,6 @@
     margin: auto;
     left: 75px;
     bottom: 15px;
-}
-
-.profile-pic__row h3 {
-    text-align: center;
 }
 
 .profile-body__row {
