--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupRepositorySettings.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupRepositorySettings.html
@@ -8,7 +8,7 @@
                 <h6 th:if="${!changesSaved}" style="color:#FF0000">Changes discarded</h6>
             </div>
             <h5 th:if="${moreThan100Commits} != -1" th:text="'Connected to: ' + ${groupRepositorySettings.getRepositoryName()} + '.'"></h5>
-            <h5 th:if="${moreThan100Commits} != -1" th:text="${moreThan100Commits} == 1 ? 'More than 100 commits to repository.' : ${numCommits} + ' commits to repository.'"></h5>
+            <h5 th:if="${moreThan100Commits} != -1" th:text="${moreThan100Commits} == 1 ? '100 or more commits to repository.' : ${numCommits} + ' commits to repository.'"></h5>
             <h5 th:if="${moreThan100Commits} == -1" style="color:#FF0000">Error: Cannot connect to repository</h5>
         </div>
             <button type="button" id="open-modal__button" data-bs-toggle="modal" data-bs-target="#group-repository-settings__modal">Repository Settings</button>
