--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupRepositorySettings.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupRepositorySettings.html
@@ -36,7 +36,7 @@
                         <label for="group-repository__server-url">Repository Server URL *</label>
                         <input type="text" id="group-repository__server-url" name="repositoryServerUrl" th:value="${groupRepositorySettings.getGitlabServerUrl()}" pattern="(.|\s)*\S(.|\s)*" title="Repository server URL must not be blank" required>
 
-                        <button type="submit" id="group-form__save">Save Changes</button>
+                        <button type="submit" data-bs-dismiss="modal" id="group-form__save">Save Changes</button>
                         <a id="group-form__discard" data-bs-dismiss="modal" onclick="updateGroupRepositoryElement(false)" th:href="@{groups}">Discard</a>
                     </form>
                 </div>
