#Fix adjust charts to screen size.

--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -288,11 +288,11 @@ html {
     justify-content: center;
 }
 
-.skills-categories-chart__flex-container, .evidence-time-chart__flex-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+/*.skills-categories-chart__flex-container, .evidence-time-chart__flex-container {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    justify-content: center;*/
+/*}*/
 
 .evidence-chart__flex-container {
     display: flex;
@@ -304,8 +304,8 @@ html {
 #group-chart__categories-chart, #group-chart__skills-chart, #group-chart__evidence-chart, #group-chart__time-chart {
     /*flex-grow: 1;*/
     /*overflow: hidden;*/
-    height: 500px;
-    min-width: 800px;
+    min-height: 40em;
+    min-width: 50em;
 }
 
 .graph__dropdown {
