--- a/portfolio/src/main/resources/static/styles/user/user.css
+++ b/portfolio/src/main/resources/static/styles/user/user.css
@@ -1,6 +1,17 @@
 
 
+#user-header {
+    padding: 15px 15px 15px 15px;
+    border: 1px solid var(--color-accent);
+    background-image: linear-gradient(180deg, var(--color-primary), var(--color-tertiary) 90%);
+    color: var(--color-complement);
+    border-radius: 10px;
+}
+
+
 .carousel-buttons {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     gap: 10px;
     width: 50%;
 }
