--- a/portfolio/src/main/resources/templates/fragmentsUser/profile.html
+++ b/portfolio/src/main/resources/templates/fragmentsUser/profile.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
+<link rel="stylesheet" th:href="@{styles/user/profile.css}">
 
-<body>
-    <div id="page-content" class="constrict">
-        <div class="container">
-            <div class="profile-pic__row flex-column">
-                <img th:src="${pageUser.profileImagePath}" style="z-index: 1;" class="profile-image" alt="profilePhoto">
-                <a th:if="${owner}" th:href="@{addProfilePicture}"><img th:src="@{images/cameraIcon.png}" style="z-index: 2;" class="icon" alt="cameraIcon"></a>
-                <h3> <span th:text="${pageUser.fullName}" th:remove="tag">title</span></h3>
-            </div>
-
-            <div class="profile-body__row">
-                <div class="profile-body__content" th:if="${pageUser.nickname != ''}"><strong >Nickname </strong>  <p id="profile__user-nickname" th:text="${pageUser.nickname}" /> </div>
-                <p class="profile-body__content"><strong >Username </strong>  <p th:text="${pageUser.username}" /> </p>
-                <div class="profile-body__content" th:if="${pageUser.personalPronouns != ''}"><strong >Pronouns </strong> <p id="profile__user-pronouns" th:text="${pageUser.personalPronouns}" /> </div>
-                <p class="profile-body__content"><strong >Email </strong>  <p th:text="${pageUser.email}" /> </p>
-                <p class="profile-body__content"><strong >Date of Registration </strong>  <p th:text="${user.memberSince}" /> </p>
-                <div class="profile-body__content" th:if="${pageUser.bio != ''}"><strong >Bio</strong><p id="profile__user-biography" th:text="${pageUser.bio}" /> </div>
-                <p class="profile-body__content"><strong >Roles</strong><p><div id="role-button" th:each="role: ${pageUser.roleStrings}" th:text="${role}"></div> </p> </p>
-            </div>
-        </div>
+<div class="container">
+    <div class="profile-pic__row flex-column">
+        <img th:src="${pageUser.profileImagePath}" style="z-index: 1;" class="profile-image" alt="profilePhoto">
+        <a th:if="${owner}" th:href="@{addProfilePicture}"><img th:src="@{images/cameraIcon.png}" style="z-index: 2;" class="icon" alt="cameraIcon"></a>
+        <h3> <span th:text="${pageUser.fullName}" th:remove="tag">title</span></h3>
     </div>
-</body>
-</html>
+
+    <div class="profile-body__row">
+        <div class="profile-body__content" th:if="${pageUser.nickname != ''}"><strong >Nickname </strong>  <p id="profile__user-nickname" th:text="${pageUser.nickname}" /> </div>
+        <p class="profile-body__content"><strong >Username </strong>  <p th:text="${pageUser.username}" /> </p>
+        <div class="profile-body__content" th:if="${pageUser.personalPronouns != ''}"><strong >Pronouns </strong> <p id="profile__user-pronouns" th:text="${pageUser.personalPronouns}" /> </div>
+        <p class="profile-body__content"><strong >Email </strong>  <p th:text="${pageUser.email}" /> </p>
+        <p class="profile-body__content"><strong >Date of Registration </strong>  <p th:text="${user.memberSince}" /> </p>
+        <div class="profile-body__content" th:if="${pageUser.bio != ''}"><strong >Bio</strong><p id="profile__user-biography" th:text="${pageUser.bio}" /> </div>
+        <p class="profile-body__content"><strong >Roles</strong><p><div id="role-button" th:each="role: ${pageUser.roleStrings}" th:text="${role}"></div> </p> </p>
+    </div>
+</div>
+
