--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -7,11 +7,15 @@
     <title>Profile</title>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" th:href="@{styles/user/user.css}">
-    <link rel="stylesheet" th:href="@{styles/user/profile.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <script rel="script" th:src="@{scripts/user/profile.js}"></script>
+    <script rel="script" th:src="@{scripts/user/portfolio.js}"></script>
+    <script th:inline="javascript">
+        const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
+        const USER_ID = [[${pageUser.id}]];
+    </script>
 </head>
 
 <body>
@@ -21,6 +25,12 @@
 <nav th:replace="fragments/navbar :: navbar"></nav>
 
 <div id="page-content" class="constrict">
+<!-- User Header -->
+    <div id="user-header">
+        <header class="user-header flex-column">
+            <h1 class="user-header__name" th:text="${pageUser.getFirstAndLast}"></h1>
+        </header>
+    </div>
 
     <div class="carousel-buttons flex-row">
         <button type="button" class="user-tab__button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
@@ -39,15 +49,16 @@
             <div class="carousel-item active">
                 <div th:replace="fragmentsUser/profile"></div>
             </div>
-<!--            <div class="carousel-item">-->
-<!--                <div th:replace="fragmentsGroup/groupStatistics"></div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item">-->
-<!--                <div th:replace="fragmentsGroup/groupRepository"></div>-->
-<!--            </div>-->
+            <div class="carousel-item">
+                <div th:replace="fragmentsUser/portfolioMain"></div>
+            </div>
         </div>
     </div>
 
 </div>
 </body>
+
+<script>
+    updateUserPortfolio()
+</script>
 </html>
