#feature #refactor pair[bjs185] fixed issue with background appearing white. Added user statistics fragment. Started adding skill and cat pages as fragments. Had issues with getting the thymeleaf and JS to call the function correct. Bede zoomed to help me and it now works.

--- a/portfolio/src/main/resources/static/styles/stylesheet.css
+++ b/portfolio/src/main/resources/static/styles/stylesheet.css
@@ -16,7 +16,7 @@
 body {
     font-family: Arial, sans-serif;
     font-weight: 200;
-    background-color: rgba(251, 196, 144, 0.5); /* Secondary Colour */
+    background-color: rgba(251, 196, 144, 0.5) !important; /* Secondary Colour */
 }
 
 h5 {
