--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -52,6 +52,9 @@
             <div class="carousel-item">
                 <div th:replace="fragmentsUser/portfolioMain"></div>
             </div>
+            <div class="carousel-item">
+                <div th:replace="fragmentsUser/userStatistics"></div>
+            </div>
         </div>
     </div>
 
