--- a/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
@@ -44,7 +44,7 @@
             <h2 th:text="Skills"></h2>
             <div class="skill__details">
                 <a class="no-skill__link " th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-skill?skill='">No Skill</a>
-                <a th:each="skill: ${skillsList}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-skill?skill=' + ${skill}"></a>
+                <button th:each="skill: ${skillsList}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:onclick="updateUserPortfolioWithSkill([[${skill}]])"></button>
             </div>
         </div>
     </div>
