--- a/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
@@ -35,15 +35,15 @@
             <!-- Categories Tab -->
             <h2>Categories</h2>
             <div class="categories__details">
-                <a class="no-category__link" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-categories?category='">No Category</a>
-                <a class="category__link" th:each="category: ${categoryList}" th:text="${category}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-categories?category=' + ${category}"></a>
+                <button class="no-category__link" th:onclick="updateUserPortfolioWithCategory('')">No Category</button>
+                <button class="category__link" th:each="category: ${categoryList}" th:text="${category}" th:onclick="updateUserPortfolioWithCategory([[${category}]])"></button>
             </div>
         </div>
         <div class="skills">
             <!-- Skill list -->
             <h2 th:text="Skills"></h2>
             <div class="skill__details">
-                <a class="no-skill__link " th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-skill?skill='">No Skill</a>
+                <button class="no-skill__link " th:onclick="updateUserPortfolioWithSkill('')">No Skill</button>
                 <button th:each="skill: ${skillsList}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:onclick="updateUserPortfolioWithSkill([[${skill}]])"></button>
             </div>
         </div>
