#feature #refactor When a user finishes editing or deleting a piece of evidence it now returns to the portfolio tab as opposed to the profile tab. Looked into why weblinks were not working some issues with linking. Have made some attempts to fix with no luck. Got Bede to help but still no luck he will look into in the day.

--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -195,7 +195,7 @@
 
             <!-- Submit form !-->
             <button type="button" class="evidence-form__control-button" onclick="submitForm()" id="evidence-form__save" disabled>Save Changes</button>
-            <a class="evidence-form__control-button" id="evidence-form__discard" th:href="@{portfolio}">Discard</a>
+            <a class="evidence-form__control-button" id="evidence-form__discard" th:href="@{profile}">Discard</a>
             <p class="evidence-form__error-message" th:text="${generalError}" />
         </form>
     </div>
