--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -12,9 +12,14 @@
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <script rel="script" th:src="@{scripts/user/profile.js}"></script>
     <script rel="script" th:src="@{scripts/user/portfolio.js}"></script>
+    <script rel="script" th:src="@{scripts/evidence/saveWeblinks.js}"></script>
     <script th:inline="javascript">
         const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
         const USER_ID = [[${pageUser.id}]];
+        const IN_PORTFOLIO = [[${inPortfolio}]];
+        let EVIDENCE_IDS = [];
+        let middle_id;
+        const MAX_WEBLINKS = [[ ${maxWeblinks} ]];
     </script>
 </head>
 
@@ -49,7 +54,7 @@
             <div class="carousel-item active">
                 <div th:replace="fragmentsUser/profile"></div>
             </div>
-            <div class="carousel-item">
+            <div id="portfolio" class="carousel-item">
                 <div th:replace="fragmentsUser/portfolioMain"></div>
             </div>
             <div class="carousel-item">
@@ -63,5 +68,6 @@
 
 <script>
     updateUserPortfolio()
+    makePortfolioActive()
 </script>
 </html>
