--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -288,12 +288,6 @@ html {
     justify-content: center;
 }
 
-/*.skills-categories-chart__flex-container, .evidence-time-chart__flex-container {*/
-/*    display: flex;*/
-/*    flex-direction: row;*/
-/*    justify-content: center;*/
-/*}*/
-
 .evidence-chart__flex-container {
     display: flex;
     flex-direction: row;
@@ -302,10 +296,10 @@ html {
 }
 
 #group-chart__categories-chart, #group-chart__skills-chart, #group-chart__evidence-chart, #group-chart__time-chart {
-    /*flex-grow: 1;*/
-    /*overflow: hidden;*/
-    min-height: 40em;
-    min-width: 50em;
+    min-height: 25em;
+    min-width: 35em;
+    max-width: 60em;
+    flex: 1 1 0px;
 }
 
 .graph__dropdown {
