--- a/portfolio/src/main/resources/templates/templatesGroup/groups.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/groups.html
@@ -59,7 +59,12 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr th:each="member : ${group.getMembers}" th:with="rowDraggable=${authUserIsTeacher}" th:draggable="${rowDraggable}" th:onmousedown="${rowDraggable} ? 'copyMembers(this)' : ''" th:onmouseup="${rowDraggable} ? 'rowClick(this)' : ''" class="unselected">
+                                    <tr th:each="member : ${group.getMembers}" th:with="rowDraggable=${authUserIsTeacher}"
+                                        th:draggable="${rowDraggable}"
+                                        th:ontouchstart="${rowDraggable} ? 'copyMembers(this)' : ''"
+                                        th:onmousedown="${rowDraggable} ? 'copyMembers(this)' : ''"
+                                        th:ontouchend="${rowDraggable} ? 'rowClick(this)' : ''"
+                                        th:onmouseup="${rowDraggable} ? 'rowClick(this)' : ''" class="unselected">
                                         <th scope="row" class="user_id" th:text="${member.getId}"></th>
                                         <td th:text="${member.getFirstName}"></td>
                                         <td th:text="${member.getLastName}"></td>
