--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -277,6 +277,8 @@ html {
     margin: 1rem;
 }
 
+/* Groups Statistics */
+
 .group-statistics__flex-container {
     display: flex;
     flex-direction:column;
