#Fix Adjusted the home page to display the first 20 piece of evidences, and implemented a scrollbar, also changed the skills and weblinks button to ensure that the buttons take the user to the correct location

--- a/portfolio/src/main/resources/templates/fragments/evidence.html
+++ b/portfolio/src/main/resources/templates/fragments/evidence.html
@@ -43,10 +43,10 @@
                     </div>
                 </div>
                 <div class="evidence__categories">
-                    <a th:each="category: ${evidence.getCategories}" class="category__link" th:text="${category}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-categories?category=' + ${category}"></a>
+                    <a th:each="category: ${evidence.getCategories}" class="category__link" th:text="${category}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${evidence.getOwnerId}} + '-categories?category=' + ${category}"></a>
                 </div>
                 <div class="evidence__skills">
-                    <a th:each="skill: ${evidence.getSkills}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-skill?skill=' + ${skill}"></a>
+                    <a th:each="skill: ${evidence.getSkills}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${evidence.getOwnerId}} + '-skill?skill=' + ${skill}"></a>
                 </div>
                 <!-- Commits -->
                 <h4 th:if="${evidence.getNumberCommits() >  0}" class="evidence-form__commits-title">Linked Commits</h4>
