--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
@@ -18,7 +18,9 @@
 
         <div class="col-12 col-lg groupsEvidence">
             <h2>Recent Evidence</h2>
-            <div th:replace="fragments/evidence"></div>
+            <div class="evidence__container">
+                <div th:replace="fragments/evidence"></div>
+            </div>
         </div>
 
         <div class="col-12 col-lg-5">
