--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -16,9 +16,7 @@
     <script th:inline="javascript">
         const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
         const USER_ID = [[${pageUser.id}]];
-        const IN_PORTFOLIO = [[${inPortfolio}]];
         let EVIDENCE_IDS = [];
-        let middle_id;
         const MAX_WEBLINKS = [[ ${maxWeblinks} ]];
     </script>
 </head>
@@ -51,10 +49,10 @@
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="false" data-bs-ride="true">
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item" th:classappend="${!portfolioSelected} ? active">
                 <div th:replace="fragmentsUser/profile"></div>
             </div>
-            <div id="portfolio" class="carousel-item">
+            <div id="portfolio" class="carousel-item" th:classappend="${portfolioSelected} ? active">
                 <div th:replace="fragmentsUser/portfolioMain"></div>
             </div>
             <div class="carousel-item">
@@ -68,6 +66,10 @@
 
 <script>
     updateUserPortfolio()
-    makePortfolioActive()
+
+    // Removes the portfolioSelected search param from the url
+    const url = new URL(location);
+    url.searchParams.delete('portfolioSelected');
+    history.replaceState(null, null, url)
 </script>
 </html>
