--- a/portfolio/src/main/resources/static/styles/user/user.css
+++ b/portfolio/src/main/resources/static/styles/user/user.css
@@ -12,8 +12,8 @@
 .carousel-buttons {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    gap: 10px;
-    width: 50%;
+    gap: 15px;
+    justify-content: space-between;
 }
 
 .user-tab__button {
@@ -23,7 +23,7 @@
     border-radius: 3px;
     height: 3rem;
     box-shadow: none;
-    width: 30%;
+    width: 100%;
     font-size: 1.5rem;
 }
 
