--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupTable.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupTable.html
@@ -7,7 +7,11 @@
   </tr>
   </thead>
   <tbody>
-  <tr th:each="member : ${group.getMembers}" th:with="rowDraggable=${userIsTeacher}" th:id="${!rowDraggable} ? 'no-hover' : ''" th:draggable="${rowDraggable}" th:onmousedown="${rowDraggable} ? 'copyMembers(this)' : ''" th:onmouseup="${rowDraggable} ? 'rowClick(this)' : ''"  class="unselected">
+  <tr th:each="member : ${group.getMembers}"
+      th:with="rowDraggable=${userIsTeacher}" th:id="${!rowDraggable} ? 'no-hover' : ''"
+      th:draggable="${rowDraggable}" th:onmousedown="${rowDraggable} ? 'copyMembers(this)' : ''"
+      th:onmouseup="${rowDraggable} ? 'rowClick(this)' : ''"
+      th:ontouchend="${rowDraggable} ? 'toggleRowMobile(this)' : ''" class="unselected">
     <th scope="row" class="user_id" th:text="${member.getId}"></th>
     <td th:text="${member.getFirstName}"></td>
     <td th:text="${member.getLastName}"></td>
