--- a/portfolio/src/main/resources/templates/templatesGroup/groups.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/groups.html
@@ -63,8 +63,9 @@
                                         th:draggable="${rowDraggable}"
                                         th:ontouchstart="${rowDraggable} ? 'copyMembers(this)' : ''"
                                         th:onmousedown="${rowDraggable} ? 'copyMembers(this)' : ''"
-                                        th:ontouchend="${rowDraggable} ? 'rowClick(this)' : ''"
-                                        th:onmouseup="${rowDraggable} ? 'rowClick(this)' : ''" class="unselected">
+                                        th:ontouchend="${rowDraggable} ? 'toggleRowMobile(this)' : ''"
+                                        th:onmouseup="${rowDraggable} ? 'rowClick(this)' : ''"
+                                        class="unselected">
                                         <th scope="row" class="user_id" th:text="${member.getId}"></th>
                                         <td th:text="${member.getFirstName}"></td>
                                         <td th:text="${member.getLastName}"></td>
@@ -80,6 +81,7 @@
                             <button type="submit">View</button>
                         </form>
                         <div class="flex-row" th:if="${authUserIsTeacher || #lists.contains(group.getMembers, user)}">
+                            <button th:id="${group.getGroupId}" th:data-group-id="group_ + ${group.getGroupId}" onclick="copyHere(this.getAttribute('data-group-id'))" hidden="hidden" th:class="groups__copy-member-mobile">Copy</button>
                             <button onclick="removeSelectedUsers(this)" hidden="hidden" th:class="'group_' + ${group.getGroupId} + '_remove_users_button'">Remove Selected Users</button>
                             <form th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
                                 <button type="submit">Edit</button>
