--- a/portfolio/src/main/resources/static/styles/evidence/portfolio.css
+++ b/portfolio/src/main/resources/static/styles/evidence/portfolio.css
@@ -68,29 +68,21 @@
 }
 
 .col-lg {
-    padding-top: 70px;
+    padding-top: 62px;
 }
 
 /* Evidence Card */
-
-.skills {
-    background-color: var(--color-secondary);
-    margin: 5px;
-    padding: 10px;
-    border-radius: 5px;
-}
 
 .skill__details {
     padding-top: 10px;
     display: flex;
     flex-wrap: wrap;
-    border-top: 1px solid var(--color-accent);
+    border-bottom: 1px solid var(--color-accent);
     padding-bottom: 30px;
 }
 
 .reset-filter {
     padding-top: 10px;
-    border-top: 1px solid var(--color-accent);
 }
 
 .reset__link {
@@ -138,7 +130,7 @@
     width: fit-content;
 }
 
-.categories {
+.filter-div {
     background-color: var(--color-secondary);
     margin: 5px;
     padding: 10px;
@@ -147,9 +139,10 @@
 
 .categories__details {
     padding-top: 10px;
+    padding-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
-    border-top: 1px solid var(--color-accent);
+    border-bottom: 1px solid var(--color-accent);
 }
 
 .all-evidence-link {
