#Fix Fixed the weblinks not appearing for another users evidence

--- a/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/portfolio.html
@@ -46,4 +46,9 @@
         </div>
     </div>
 </div>
+<script th:inline="javascript">
+    for (let i = 0; i < EVIDENCE_IDS.length; i++) {
+        getWebLinks(EVIDENCE_IDS[i])
+    }
+</script>
 </html>
