--- a/portfolio/src/main/resources/templates/fragments/evidence.html
+++ b/portfolio/src/main/resources/templates/fragments/evidence.html
@@ -18,10 +18,10 @@
             </div>
               <div class="evidence-title__weblinks-commits-div">
                   <div id="evidence-title__weblinks">
-                      <i class="bi bi-link-45deg" th:text="${evidence.getNumberWeblinks}"></i>
+                      <em class="bi bi-link-45deg" th:text="${evidence.getNumberWeblinks}"></em>
                   </div>
                   <div class="evidence-title__commits">
-                      <i class="bi bi-git" th:text="${evidence.getNumberCommits}"></i>
+                      <em class="bi bi-git" th:text="${evidence.getNumberCommits}"></em>
                   </div>
               </div>
         </div>
@@ -88,7 +88,7 @@
                     <div th:if="${owner}" class="evidence-title-div__button">
                         <form action="#" class="evidence-title--form" th:action="@{deleteEvidence-{evidenceId}(evidenceId=${evidence.getId})}" th:onSubmit="return confirm('Are you sure you want to delete evidence: ' + [[${evidence.getTitle}]] + '?\nThis action cannot be undone.')" th:method="delete" >
                             <button type="submit" class="evidence-title--icon_container-delete">
-                                <i class="bi bi-trash evidence-title--icon"></i>
+                                <em class="bi bi-trash evidence-title--icon"></em>
                             </button>
                         </form>
                     </div>
