--- a/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/addEvidence.html
@@ -160,7 +160,7 @@
             <label th:if="${evidenceId == -1 || evidenceId =='-1'}">Web Links</label>
             <div th:if="${evidenceId == -1 || evidenceId =='-1'}" id="evidence-form__webLink-container"></div>
             <input th:if="${evidenceId == -1 || evidenceId =='-1'}" type="text" id="evidence-form__webLink-name" onkeyup="checkValid()" placeholder="Web Link Name"/>
-            <input th:if="${evidenceId == -1 || evidenceId =='-1'}" type="text" id="evidence-form__webLink-link" onkeyup="checkValid()" placeholder="Web Link"/>
+            <input th:if="${evidenceId == -1 || evidenceId =='-1'}" type="url" id="evidence-form__webLink-link" onkeyup="checkValid()" placeholder="Web Link" oninvalid="this.setCustomValidity('Incorrect Web Link Format. Example: \'http(s)://example.com\'')" oninput="this.setCustomValidity('')"/>
             <P th:if="${webLinkError}" style="color: red">Incorrect Web Link Format</P>
             <div th:if="${evidenceId == -1 || evidenceId =='-1'}" class="evidence__button-wrapper flex-row">
               <button id="weblink-button" type="button" class="btn btn-primary" onclick="addWebLinks()">
