#fix fixed sonarqube issues for files changed in this task

--- a/portfolio/src/main/resources/templates/templatesEvidence/skills.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/skills.html
@@ -3,6 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
 <head>
+    <title>Skills</title>
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
