#feature #test wrote controller and javascript methods to filter the evidence on the group home page by skill. Added option to filter by no skill and added unit test for that too

--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -9,6 +9,7 @@
   <script src="https://www.gstatic.com/charts/loader.js"></script>
   <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
   <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+  <script th:src="@{scripts/group/groupHome.js}"></script>
   <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
   <link rel="stylesheet" th:href="@{styles/group/group.css}">
   <link rel="stylesheet" th:href="@{styles/group/groups.css}">
