--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupTable.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupTable.html
@@ -8,11 +8,15 @@
   </thead>
   <tbody>
   <tr th:each="member : ${group.getMembers}"
-      th:with="rowDraggable=${userIsTeacher}" th:id="${!rowDraggable} ? 'no-hover' : ''"
-      th:draggable="${rowDraggable}" th:onmousedown="${rowDraggable} ? 'copyMembers(this)' : ''"
+      th:with="rowDraggable=${userIsTeacher}"
+      th:id="${!rowDraggable} ? 'no-hover' : ''"
+      th:draggable="${rowDraggable}"
+      th:ontouchstart="${rowDraggable} ? 'toggleRowMobile(this)' : ''"
+      th:onmousedown="${rowDraggable} ? 'copyMembers(this)' : ''"
+      th:ontouchend="${rowDraggable} ? 'copyMembers(this)' : ''"
       th:onmouseup="${rowDraggable} ? 'rowClick(this)' : ''"
-      th:ontouchend="${rowDraggable} ? 'toggleRowMobile(this)' : ''" class="unselected group-row">
-    <th class="group-row" scope="row" class="user_id" th:text="${member.getId}"></th>
+      class="unselected">
+    <th scope="row" class="user_id group-row" th:text="${member.getId}"></th>
     <td class="group-row" th:text="${member.getFirstName}"></td>
     <td class="group-row" th:text="${member.getLastName}"></td>
   </tr>
