--- a/portfolio/src/main/resources/templates/templatesGroup/addEditGroup.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/addEditGroup.html
@@ -35,7 +35,7 @@
         <!-- Add/Edit Group Form -->
         <form id="group-form__form" class="flex-column" th:action="@{editGroup-{group}(group=${groupId})}" th:method="post">
             <!--SHORT NAME AS TEACHER/ADMIN-->
-            <div th:if="${authUserIsPrivileged}">
+            <div th:if="${user.isTeacher}">
                 <label for="group-form__short_name-field">Group Short Name *</label>
                 <p th:text="${shortNameErrorMessage}" class="form-error-message"></p>
                 <input type="text" id="group-form__short_name-field" name="groupShortName" maxlength="20" placeholder="Group Short Name" th:value="${groupShortName}" th:pattern="${isNotBlankPattern}" title="Group Name must not be blank and cannot contain special characters" required onkeyup="countShortNameCharacters()">
@@ -43,7 +43,7 @@
                 <p th:text="${shortNameError}" class="form-error-message"></p>
             </div>
             <!--SHORT NAME AS GROUP MEMBER-->
-            <div th:if="${!authUserIsPrivileged}">
+            <div th:if="${!user.isTeacher}">
                 <label for="group-form__short_name-field">Group Short Name *</label>
                 <p th:text="${shortNameErrorMessage}" class="form-error-message"></p>
 
