--- a/portfolio/src/main/resources/templates/templatesUser/userList.html
+++ b/portfolio/src/main/resources/templates/templatesUser/userList.html
@@ -43,7 +43,7 @@
                     <a th:href="'userList-' + ${currentPage} + '?sortType=roles&isAscending=' + (${sortType} == 'roles' ? (${isAscending} ? 'false' : 'true') : 'true')"
                        th:text="'Roles' + (${sortType} == 'roles' ? (${isAscending} ? '&#9650;' : '&#9660;') : '')"></a>
                 </th>
-                <th th:if="${authUserIsTeacher}">
+                <th th:if="${user.isTeacher}">
                     <div>Add role</div>
                 </th>
             </tr>
@@ -58,7 +58,7 @@
                         <div th:each="role: ${listedUser.roleStrings}">
                             <div id="role-button">
                                 <div th:text="${role}"></div>
-                                <form th:if="${#lists.size(listedUser.roleStrings) > 1 and authUserIsTeacher and (!(role == 'Course Administrator') or (authUserIsAdmin && listedUser.id != currentUserId)) and (!(role == 'Teacher') or authUserIsAdmin)}" th:action="@{removeRole}"  method="post">
+                                <form th:if="${#lists.size(listedUser.roleStrings) > 1 and user.isTeacher and (!(role == 'Course Administrator') or (user.isAdmin && listedUser.id != currentUserId)) and (!(role == 'Teacher') or user.isAdmin)}" th:action="@{removeRole}"  method="post">
                                     <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
                                     <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
                                     <input type="hidden" th:name="roleType"  th:value="${#strings.toUpperCase(role)}" />
@@ -67,8 +67,8 @@
                             </div>
                         </div>
                     </td>
-                    <td th:if="${authUserIsTeacher}">
-                        <form th:if="${authUserIsTeacher and !#lists.contains(listedUser.roleStrings, 'Student')}" th:action="@{addRole}"  method="post">
+                    <td th:if="${user.isTeacher}">
+                        <form th:if="${user.isTeacher and !#lists.contains(listedUser.roleStrings, 'Student')}" th:action="@{addRole}"  method="post">
                             <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
                             <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
                             <input type="hidden" th:name="roleType"  th:value="STUDENT" />
@@ -76,7 +76,7 @@
                                 <div>+ Student</div>
                             </button>
                         </form>
-                        <form th:if="${authUserIsAdmin and !#lists.contains(listedUser.roleStrings, 'Teacher')}" th:action="@{addRole}"  method="post">
+                        <form th:if="${user.isAdmin and !#lists.contains(listedUser.roleStrings, 'Teacher')}" th:action="@{addRole}"  method="post">
                             <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
                             <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
                             <input type="hidden" th:name="roleType"  th:value="TEACHER" />
@@ -84,7 +84,7 @@
                                 + Teacher
                             </button>
                         </form>
-                        <form th:if="${authUserIsAdmin and !#lists.contains(listedUser.roleStrings, 'Course Administrator')}" th:action="@{addRole}"  method="post">
+                        <form th:if="${user.isAdmin and !#lists.contains(listedUser.roleStrings, 'Course Administrator')}" th:action="@{addRole}"  method="post">
                             <input type="hidden" th:name="url" th:value="'userList-' + ${currentPage} + ${sortingSuffix}"/>
                             <input type="hidden" th:name="userId"  th:value="${listedUser.id}"/>
                             <input type="hidden" th:name="roleType"  th:value="COURSE_ADMINISTRATOR" />
