#chore #feature Merged changes from dev, added changes that fixed group graphs to user graphs.

--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -72,10 +72,11 @@
 
 <script>
     updateUserPortfolio()
-
     // Removes the portfolioSelected search param from the url
     const url = new URL(location);
     url.searchParams.delete('portfolioSelected');
     history.replaceState(null, null, url)
+    // Contingency for charts not loading.
+    setTimeout(updateCharts, 3000)
 </script>
 </html>
