--- a/portfolio/src/main/resources/static/styles/user/user.css
+++ b/portfolio/src/main/resources/static/styles/user/user.css
@@ -39,21 +39,29 @@
 
 /* User Statistics Tab */
 
+.user-statistics__flex-container {
+    display: flex;
+    flex-direction:column;
+}
+
 .data-charts__flex-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.skills-categories-chart__flex-container, .evidence-time-chart__flex-container {
+.evidence-chart__flex-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
-#user-chart__categories-chart, #user-chart__skills-chart, #user-chart__evidence-chart, #user-chart__time-chart {
-    flex-grow: 1;
-    overflow: hidden;
-    height: 500px;
+#user-chart__skills-chart {
+    min-height: 25em;
+    min-width: 35em;
+    max-width: 60em;
+    flex: 1 1 0px;
 }
+
 
