#Feature Set up the html div to handle the evdience graph

--- a/portfolio/src/main/resources/templates/fragmentsUser/userStatistics.html
+++ b/portfolio/src/main/resources/templates/fragmentsUser/userStatistics.html
@@ -4,6 +4,7 @@
     <div class="data-charts__flex-container">
         <div class="evidence-chart__flex-container">
             <div id="user-chart__skills-chart"></div>
+            <div id="user-chart__time-chart"></div>
         </div>
     </div>
 </div>
