--- a/portfolio/src/main/resources/static/styles/navbar.css
+++ b/portfolio/src/main/resources/static/styles/navbar.css
@@ -1,28 +1,4 @@
-:root {
-    font-size: 16px;
-
-    /* CSS variables */
-    --site-navigation-width: 200px;
-    --color-primary: #FBAA60;
-    --color-secondary: #FBC490;
-    --color-tertiary: #F67B50;
-    --color-complement: #F4EAE6;
-    --color-accent: #A82810;
-}
-
-
 /******************** Elements ********************/
-
-body {
-    font-family: Arial, sans-serif;
-    font-weight: 200;margin: 0;
-    background-color: rgba(251, 196, 144, 0.5); /* Secondary Colour */
-}
-
-h5 {
-    font-size: 1.5rem;
-}
-
 .flex-column {
     display: flex;
     flex-direction: column;
@@ -39,8 +15,8 @@ h5 {
     margin: 0 0 0 var(--site-navigation-width);
     padding: 0;
     overflow: hidden;
-    background-color: black;
-    color: var(--color-complement);
+    background-color: var(--primary-highlight);
+    color: var(--text-surface);
     list-style-type: none;
 }
 
@@ -58,14 +34,14 @@ h5 {
 
 .header__item a, .header__dropdown_button {
     display: inline-block;
-    color: var(--color-complement);
+    color: var(--text-surface);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 .header__item a:hover, .header__dropdown:hover .header__dropdown_button {
-    background-color: var(--color-complement);
+    background-color: var(--surface);
 }
 
 .header__dropdown {
@@ -76,14 +52,14 @@ h5 {
 .header__dropdown--content {
     display: none;
     position: absolute;
-    background-color: var(--color-secondary);
+    background-color: var(--surface);
     min-width: 200px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .header__dropdown--content a {
-    color: black;
+    color: var(--text-surface);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -91,7 +67,7 @@ h5 {
 }
 
 .header__dropdown--content a:hover {
-    background-color: #F67B50;
+    background-color: var(--surface-highlight);
     text-decoration: none;
 }
 
