--- a/portfolio/src/main/resources/static/styles/user/user.css
+++ b/portfolio/src/main/resources/static/styles/user/user.css
@@ -2,9 +2,10 @@
 
 #user-header {
     padding: 15px 15px 15px 15px;
-    border: 1px solid var(--color-accent);
-    background-image: linear-gradient(180deg, var(--color-primary), var(--color-tertiary) 90%);
-    color: var(--color-complement);
+    border: 1px solid var(--primary-highlight);
+    /*background-image: linear-gradient(180deg, var(--surface-highlight), var(--surface) 90%);*/
+    background-color: var(--surface);
+    color: var(--primary-highlight);
     border-radius: 10px;
 }
 
@@ -17,9 +18,9 @@
 }
 
 .user-tab__button {
-    color: white;
-    border: 1px solid var(--color-accent);
-    background-color: #e06c41 ;
+    color: var(--text-surface);
+    border: 1px solid var(--primary-highlight);
+    background-color: var(--surface);
     border-radius: 3px;
     height: 3rem;
     box-shadow: none;
@@ -28,9 +29,8 @@
 }
 
 .user-tab__button:hover {
-    color: #f78e55;
-    border-color: #f78e55;
-    background-color: #f4ebe6;
+    color: var(--background);
+    background-color: var(--primary-highlight);
     height: 3rem;
     box-shadow: none;
     font-size: 1.5rem;
