#Feature Changes the default dates to project start date and project end date for the graph refinement

--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -20,7 +20,7 @@
         const USER_ID = [[${pageUser.id}]];
         const PROJECT_ID = [[${currentProject.getId}]];
         const START_DATE = [[${currentProject.getStartDate}]];
-        const END_DATE = [[${currentProject.getStartDate}]];
+        const END_DATE = [[${currentProject.getEndDate}]];
         const IN_PORTFOLIO = [[${inPortfolio}]];
         let EVIDENCE_IDS = [];
         const MAX_WEBLINKS = [[ ${maxWeblinks} ]];
